[project]
name = "langgraph-x-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.10",
    "langchain-deepseek>=1.1.0",
    "langgraph>=1.2.6",
    "langgraph-supervisor>=0.0.31",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]
